# mandelbrot

./: .gitmodules  README.md  cleanup  combineImage
cmake/: BuildType.cmake  ConfigExecutable.cmake  FindCharm.cmake  FindLibCXX.cmake  TPLs.cmake  get_compiler_flags.cmake
src/: CMakeLists.txt  Macro.h  Mandel.C  Mandelbrot.C  NoWarning_gil.h  NoWarning_mandel.decl.h  NoWarning_mandel.def.h  mandel.ci
tpl/: CMakeLists.txt
